--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,9 @@
 dist
 
 # generated types
-.astro/
+.astro
+# .vercel
+# .vscode
 
 # dependencies
 node_modules/
@@ -14,7 +16,7 @@ yarn-error.log*
 pnpm-debug.log*
 
 # environment variables
-.env
+# .env
 # .env.production
 
 # macOS-specific files
